@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package version="2.0" xmlns="http://www.idpf.org/2007/opf" unique-identifier="BookId">
   <manifest>
+     <!-- Some of the files listed here (like the images and the fonts) 
+          don't actually exist and don't really have to for the test. -->
     <item id="test1" href="test1.xhtml"        media-type="application/xhtml+xml"/>
     <item id="test2" href="test2.xhtml"        media-type="application/xhtml+xml"/>
     <item id="test3" href="test3.xhtml"        media-type="application/xhtml+xml"/>
     <item id="style" href="main.css"           media-type="text/css"/>
     <item id="kbmk"  href="subdir/second.css"  media-type="text/css"/>
-    <item id="eee"   href="cover.gif"          media-type="image/gif"/>  
+    <item id="eee"   href="cover.gif"          media-type="image/gif"/> 
+    <item id="eeiui" href="background1.gif"    media-type="image/gif"/>   
+    <item id="eui"   href="background2.gif"    media-type="image/gif"/>      
     <item id="eoeee" href="images/img2.jpg"    media-type="image/jpeg"/>
     <item id="ncx"   href="toc.ncx"            media-type="application/x-dtbncx+xml"/>  
     <item id="hiii"  href="font1.ttf"          media-type="application/x-truetype-font"/>
